Add guardianView and refactored all

--- a/app/instructor/instructor-detail.component.html
+++ b/app/instructor/instructor-detail.component.html
@@ -41,7 +41,7 @@
 		</div>
 		<div>
 			<label>EC Phone: </label>
-        <p-inputMask mask="9999999999" [disabled]="disabled" [(ngModel)]="instructor.emergencyPhoneNumber" placeholder="(210)555-5555"></p-inputMask>
+        <p-inputMask mask="9999999999" [disabled]="disabled" [(ngModel)]="instructor.emergencyContactPhone" placeholder="(210)555-5555"></p-inputMask>
 		</div>
 		<div>
 			<label>Role: </label>
