--- a/app/instructor/instructor-list.component.html
+++ b/app/instructor/instructor-list.component.html
@@ -1,8 +1,4 @@
 <div>
-	<!--<div>
-		<label>Instructor name:</label> <input #instructorName />
-		<button (click)="add(instructorName.value); instructorName.value=''">Add</button>
-	</div>-->
 
 	<p-fieldset legend="Instructors">
 
@@ -16,18 +12,10 @@
 			(onRowSelect)="onRowSelect($event)" [responsive]="true">
 			<header>List of Instructors</header>
 			<p-column field="firstName" header="First Name" [filter]="true" filterMatchMode="contains"></p-column>
-			<!--<p-column field="middleName" header="Middle Name"></p-column>-->
 			<p-column field="lastName" header="Last Name" [filter]="true" filterMatchMode="contains"></p-column>
-			<!--<p-column field="address" header="Address"></p-column>-->
 			<p-column field="email" header="Email" [filter]="true" filterMatchMode="contains"></p-column>
 			<p-column field="phoneNumber" header="Phone" [filter]="true" filterMatchMode="contains"></p-column>
-			<!--<p-column field="mobilePhoneNumber" header="Mobile"></p-column>-->
-			<!--<p-column field="emergencyContactName" header="EC Name"></p-column>-->
-			<!--<p-column field="emergencyContactPhone" header="EC Phone"></p-column>-->
-			<!--<p-column field="role" header="Role"></p-column>-->
-			<!--<p-column field="status" header="Status"></p-column>-->
-			<!--<p-column field="employmentStartDate" header="Start Date"></p-column>-->
-			<!--<p-column field="employmentTerminationDate" header="End Date"></p-column>-->
+
 			<footer>
 				<div class="ui-helper-clearfix">
 					<button type="button" pButton (click)="showDialogToAdd()" label="Add"></button>
@@ -40,7 +28,7 @@
 			<div class="ui-grid ui-grid-responsive ui-fluid" *ngIf="instructor">
 				<div class="ui-grid-row">
 					<div class="ui-grid-col-4"><label for="firstName">First Name</label></div>
-					<div class="ui-grid-col-8"><input pInputText id="first name" [(ngModel)]="instructor.firstName" placeholder="Required"/></div>
+					<div class="ui-grid-col-8"><input pInputText id="first name" [(ngModel)]="instructor.firstName" placeholder="Required" /></div>
 				</div>
 				<div class="ui-grid-row">
 					<div class="ui-grid-col-4"><label for="middleName">Middle Name</label></div>
@@ -48,15 +36,15 @@
 				</div>
 				<div class="ui-grid-row">
 					<div class="ui-grid-col-4"><label for="lastName">Last Name</label></div>
-					<div class="ui-grid-col-8"><input pInputText id="last name" [(ngModel)]="instructor.lastName" placeholder="Required"/></div>
+					<div class="ui-grid-col-8"><input pInputText id="last name" [(ngModel)]="instructor.lastName" placeholder="Required" /></div>
 				</div>
 				<div class="ui-grid-row">
 					<div class="ui-grid-col-4"><label for="address">Address</label></div>
-					<div class="ui-grid-col-8"><input pInputText id="address" [(ngModel)]="instructor.address" placeholder="Required"/></div>
+					<div class="ui-grid-col-8"><input pInputText id="address" [(ngModel)]="instructor.address" placeholder="Required" /></div>
 				</div>
 				<div class="ui-grid-row">
 					<div class="ui-grid-col-4"><label for="email">Email</label></div>
-					<div class="ui-grid-col-8"><input pInputText id="email" [(ngModel)]="instructor.email" placeholder="Required"/></div>
+					<div class="ui-grid-col-8"><input pInputText id="email" [(ngModel)]="instructor.email" placeholder="Required" /></div>
 				</div>
 				<div class="ui-grid-row">
 					<div class="ui-grid-col-4"><label for="phoneNumber">Phome Number</label></div>
@@ -68,7 +56,7 @@
 				</div>
 				<div class="ui-grid-row">
 					<div class="ui-grid-col-4"><label for="emergencyContactName">EC Name</label></div>
-					<div class="ui-grid-col-8"><input pInputText id="emergencyContactName" [(ngModel)]="instructor.emergencyContactName" placeholder="Required"/></div>
+					<div class="ui-grid-col-8"><input pInputText id="emergencyContactName" [(ngModel)]="instructor.emergencyContactName" placeholder="Required" /></div>
 				</div>
 				<div class="ui-grid-row">
 					<div class="ui-grid-col-4"><label for="emergencyContactPhone">EC Phone</label></div>
@@ -94,7 +82,8 @@
 				</div>
 				<div class="ui-grid-row">
 					<div class="ui-grid-col-4"><label for="employmentTerminationDate">End Date</label></div>
-			<p-inputMask mask="9999/99/99" [disabled]="disabled" [(ngModel)]="instructor.employmentTerminationDate" placeholder="yyyy/mm/dd" slotChar="yyyy/mm/dd"></p-inputMask>
+					<p-inputMask mask="9999/99/99" [disabled]="disabled" [(ngModel)]="instructor.employmentTerminationDate" placeholder="yyyy/mm/dd"
+						slotChar="yyyy/mm/dd"></p-inputMask>
 				</div>
 			</div>
 			<footer>
