--- a/app/main/main.component.html
+++ b/app/main/main.component.html
@@ -16,6 +16,7 @@
 				<li> <a routerLink="/student">Students</a> </li>
 				<li> <a routerLink="/instructor">Instructors</a> </li>
 				<li> <a routerLink="/lessons">Learning Plans</a> </li>
+				<li> <a routerLink="/guardian">Guardians</a> </li>
 				<li> <a routerLink="/accounts">Accounts</a> </li>
 				<li> <a routerLink="/login" onclick="UIkit.offcanvas.hide([force = false]);">Log Out</a> </li>
 			</ul>
