More changes to guardian and studentProfile

--- a/app/guardian/guardian-list.component.html
+++ b/app/guardian/guardian-list.component.html
@@ -44,7 +44,7 @@
                     <div class="ui-grid-col-8"><input pInputText id="email" [(ngModel)]="guardian.email" placeholder="Required" /></div>
                 </div>
                 <div class="ui-grid-row">
-                    <div class="ui-grid-col-4"><label for="phoneNumber">Phome Number</label></div>
+                    <div class="ui-grid-col-4"><label for="phoneNumber">Phone Number</label></div>
                     <p-inputMask mask="9999999999" [disabled]="disabled" [(ngModel)]="guardian.phoneNumber" placeholder="(210)555-5555"></p-inputMask>
                 </div>
                 <div class="ui-grid-row">
